--- a/cymanlibssid/src/main/AndroidManifest.xml
+++ b/cymanlibssid/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
     <application>
         <activity android:name=".activity.SignUpStepTwoActivity"
             android:screenOrientation="portrait"
@@ -20,6 +27,10 @@
         <activity android:name=".activity.LoginActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".activity.PhoneNumberActivity"
+            android:screenOrientation="portrait"
+            />
+
     </application>
 
 </manifest>
