--- a/cymanlibssid/src/main/AndroidManifest.xml
+++ b/cymanlibssid/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:screenOrientation="portrait"
             />
 
+        <activity android:name=".activity.PhoneLoginActivity"
+            android:screenOrientation="portrait"
+            />
+
+
     </application>
 
 </manifest>
